# whaleos-tlsdate

./: .gitignore  Cargo.toml  Makefile.am  OWNERS  PRESUBMIT.cfg  README  autogen.sh  build.rs  configure.ac  tlsdate-seccomp-amd64.policy  tlsdate-seccomp-arm.policy  tlsdate-seccomp-arm64.policy  tlsdate-seccomp-x86.policy  unblocked_terms.txt
dbus/: org.torproject.tlsdate.conf.in  org.torproject.tlsdate.service
init/: tlsdated-directories.conf  tlsdated.conf  tlsdated.service
man/: tlsdate.1
src/: dbus.c  include.am  lib.rs  openssl_compat.h  platform-cros-util-unittest.c  platform-cros-util.c  platform-cros-util.h  platform-cros.c  proxy-bio-unittest.c  proxy-bio.c  proxy-bio.h  routeup.c  seccomp.c  test-bio.c  tlsdate-helper.c  tlsdate-helper.h  tlsdate-setter.c  tlsdate.c  tlsdate.h  tlsdated-unittest.c  tlsdated.c  util.c  util.h
src/events/: kickoff_time_sync.c  run_tlsdate.c  save.c  sigchld.c  time_set.c
