[package]
name = "tlsdate_dbus"
version = "0.24.52"
authors = ["The Chromium OS Authors"]
edition = "2018"
exclude = ["*"]
include = ["Cargo.toml", "build.rs", "src/lib.rs", "src/bindings/*"]

[build-dependencies]
chromeos-dbus-bindings = { path = "../../platform2/chromeos-dbus-bindings" } # provided by ebuild

[dependencies]
dbus = "0.9"
